--- a/main/BitBracket/src/BitBracket/Views/Announcements/_UserAnnouncementForm.cshtml
+++ b/main/BitBracket/src/BitBracket/Views/Announcements/_UserAnnouncementForm.cshtml
@@ -1,5 +1,7 @@
-@* Located at Views/Announcements/_UserAnnouncementForm.cshtml *@
-
-<div id="announcementsList">
-    <!-- Announcements will be loaded here through JavaScript -->
+<div id="announcementsList2" class="ui stackable cards">
+    <!-- Announcements will be loaded here by userAnnouncementForm.js -->
 </div>
+
+@section Scripts {
+    <script src="~/js/userAnnouncementForm.js"></script>
+}
