--- a/main/BitBracket/src/BitBracket/Views/Home/Profile.cshtml
+++ b/main/BitBracket/src/BitBracket/Views/Home/Profile.cshtml
@@ -41,6 +41,8 @@
         </div>
     </div>
 
+    <a href="@Url.Action("ManageAnnouncement", "Home")" class="ui button secondary">Manage Announcements</a>
+
     <script src="~/js/profilepage.js"></script>
 </body>
 </html>
