--- a/main/BitBracket/src/BitBracket/Views/Home/UserAnnouncementCreate.cshtml
+++ b/main/BitBracket/src/BitBracket/Views/Home/UserAnnouncementCreate.cshtml
@@ -1,13 +1,15 @@
-@* Located at Views/Home/UserAnnouncementCreate.cshtml *@
-
 @{
-    Layout = "~/Views/Shared/_Layout.cshtml";
-    ViewData["Title"] = "Create Announcement";
+    ViewData["Title"] = "Create Announcements";
 }
 
-<h2>@ViewData["Title"]</h2>
+<body class="announcement-background"></body>
+<div class="section-gap"></div>
+<div class="ui container">
+    <h1 class="title-styling">@ViewData["Title"]</h1>
+    @Html.Partial("~/Views/Announcements/_UserAnnouncementCreate.cshtml")
 
-@Html.Partial("~/Views/Announcements/_UserAnnouncementCreate.cshtml")
+    <a href="@Url.Action("UserAnnouncementForm", "Home")" class="ui button secondary">Return to Announcement Page</a>
+</div>
 
 @section Scripts {
     <script src="~/js/userAnnouncementCreate.js"></script>
