--- a/main/BitBracket/src/BitBracket/Views/Home/SearchProfiles.cshtml
+++ b/main/BitBracket/src/BitBracket/Views/Home/SearchProfiles.cshtml
@@ -15,6 +15,13 @@
                     </div>
                     <div class="content">
                         <a class="header">@Model.Username</a>
+                        @if (User.Identity.IsAuthenticated)
+                        {
+                            <button class="ui button" id="friend-button"></button>
+                            <div id="hiddenElement" style="visibility: hidden;">@Model.ProfileID</div>
+                        }
+
+
                         <div class="meta">
                             <span>@Model.Email</span>
                             <p><strong>Tag:</strong> <div id="tagId" class="ui label">@Model.Tag</div></p>
@@ -26,4 +33,6 @@
             </div>
         </div>
     </div>
+    <script src="~/js/UsersPage.js" ></script>
+
 </body>
