Scrum-35 GUID Link Saving Brackets for Visitors
completed feature, but is containing two  bugs:
1. Double elimination brackets do not display from the DB
2. Updated brackets do not display from the DB

--- a/main/BitBracket/src/BitBracket/Views/Bracket/CreateBracket.cshtml
+++ b/main/BitBracket/src/BitBracket/Views/Bracket/CreateBracket.cshtml
@@ -38,10 +38,16 @@
                 </form>
          
     </div>
-    <div class="container-fluid" style="margin-top: 20px;">
+    <div class="d-grid gap-2">
+        <button id="generateButton" type="button" class="btn btn-primary">
+            Generate Bracket Link
+            <i class="clipboard icon"></i>
+        </button>     
+    </div>
     <div id="minimal" class="row">
         <div class="col demo"></div>
     </div>
+
 </div>
 </body>
 </html>
