--- a/main/BitBracket/src/BitBracket/Views/Bracket/TournamentPage.cshtml
+++ b/main/BitBracket/src/BitBracket/Views/Bracket/TournamentPage.cshtml
@@ -18,6 +18,28 @@
         Create Bracket
     </button>
 
+        <!-- Participate Requests Dropdown -->
+    <div class="ui accordion">
+        <div class="title">
+            <i class="dropdown icon"></i>
+            Participation Requests
+        </div>
+        <div class="content">
+            <p id="participationRequests"></p>
+        </div>
+    </div>
+
+    <!-- Approved Participants Dropdown -->
+    <div class="ui accordion">
+        <div class="title">
+            <i class="dropdown icon"></i>
+            Approved Participants
+        </div>
+        <div class="content">
+            <p id="approvedParticipants"></p>
+        </div>
+    </div>
+
     <!-- Bracket creation form (modal dialog) -->
    <div class="modal fade" id="bracketModal" tabindex="-1" role="dialog" aria-labelledby="bracketModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
@@ -72,3 +94,4 @@
 </html>
 
  <script src="~/js/tournament.js"></script>
+ <script src="~/js/participateRequest.js"></script>
