--- a/main/BitBracket/src/BitBracket/Views/Home/Index.cshtml
+++ b/main/BitBracket/src/BitBracket/Views/Home/Index.cshtml
@@ -5,11 +5,27 @@
 @{
     ViewData["Title"] = "Home Page";
 }
+<head>
+    <link rel="stylesheet" href="~/css/site.css" />
+
+</head>
 <div class="section-gap"></div>
 <div class="section-gap"></div>
 <body class="announcement-background"></body>
     <div class="ui container center aligned">
-        <h1 class="title-styling">Welcome to BitBracket</h1>
+        <h1 class="title-styling">Welcome to BitBracket
+        <button id="myBtn">i</button>
+
+        </h1>
+    <div id="myModal" class="modal">
+        <!-- Modal content -->
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <p>Welcome to our home page! From here, you can see the latest admin announcement, see some information</p>
+            <p>about our softwares purpose, and get oriented before seeing what we have to offer! </p>
+          
+        </div>
+    </div>
         <p class="text-styling">Your ultimate platform for organizing and participating in tournaments.</p>
         
         <div class="ui center aligned segment">
@@ -85,3 +101,5 @@
             </div>
         </div>
     </div>
+
+<script src="~/js/modalswitcher.js"></script>
