--- a/main/BitBracket/src/BitBracket/Views/Home/Search.cshtml
+++ b/main/BitBracket/src/BitBracket/Views/Home/Search.cshtml
@@ -4,6 +4,16 @@
     <link rel="stylesheet" type="text/css" href="~/css/site.css">
 </head>
 <body class="announcement-background">
+    <h1 class="title-styling">Search
+        <button id="myBtn">i</button>
+    </h1>
+    <div id="myModal" class="modal">
+        <!-- Modal content -->
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <p>Welcome to the search page, where you can search for users and tournaments!</p>
+        </div>
+    </div>
     <div class="section-gap"></div>
     <div class="section-gap"></div>
     <div class="search-bar" style="text-align: center;">
@@ -24,3 +34,4 @@
     </div>
 </body>
 <script src="~/js/search.js"></script>
+<script src="~/js/modalswitcher.js"></script>
