--- a/main/BitBracket/src/BitBracket/Views/Bracket/TournamentPage.cshtml
+++ b/main/BitBracket/src/BitBracket/Views/Bracket/TournamentPage.cshtml
@@ -4,8 +4,20 @@
 <html>
 <head>
     <title>Tournament Page</title>
+<link rel="stylesheet" href="~/css/site.css" />
 </head>
 <body class="announcement-background">
+    <h1 class="title-styling">
+        Tournament Page
+        <button id="myBtn">i</button>
+    </h1>
+<div id="myModal" class="modal">
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <p>Welcome to the tournament page, where you can create a new bracket, set a broadcast link, and manage participation requests! You can also view your created brackets and see them in more detail there.</p>
+        </div>
+</div>
+
     <div class="ui container mb-3">
         <div class="ui segment">
             <h1 class="ui sub header" id="tournamentName">Tournament Name</h1>
@@ -13,6 +25,7 @@
             <p class="ui sub header">Location: <span id="tournamentLocation">Tournament Location</span></p>
             <p class="ui sub header">Status: <span id="tournamentStatus">Tournament Status</span></p>
         </div>
+    </div>
     <div>
         <div id="stream-embed"></div>
     </div>
@@ -129,4 +142,4 @@
 <script src="https://player.twitch.tv/js/embed/v1.js"></script>
  <script src="~/js/tournament.js"></script>
  <script src="~/js/participateRequest.js"></script>
-
+<script src="~/js/modalswitcher.js"></script>
