--- a/main/BitBracket/src/BitBracket/Views/Home/Announcement.cshtml
+++ b/main/BitBracket/src/BitBracket/Views/Home/Announcement.cshtml
@@ -5,7 +5,7 @@
 }
 
 <body class="announcement-background">
-<h1 class="title-styling">@ViewData["Title"]</h1>
+<h1 class="title-styling">Announcements for previous admins</h1>
     <div class="ui container center aligned">
         <div class="announcement-container">
 
