--- a/main/BitBracket/src/BitBracket/Views/Home/Profile.cshtml
+++ b/main/BitBracket/src/BitBracket/Views/Home/Profile.cshtml
@@ -6,10 +6,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewData["Title"]</title>
+    <link rel="stylesheet" href="~/css/site.css" />
 </head>
 <body class="announcement-background">
     <div class="ui container">
-        <h1 class="title-styling">Welcome, @Model.Username</h1>
+        <h1 class="title-styling">
+            Welcome, @Model.Username, to your profile page!
+            <button id="myBtn">i</button>
+
+        </h1>
+        <div id="myModal" class="modal">
+            <!-- Modal content -->
+            <div class="modal-content">
+                <span class="close">&times;</span>
+                <p>Welcome to your very own profile page! On this page you can change a few things regarding your profile such as your tag,</p>
+                <p>bio, and profile picture. Feel free to explore and customize your profile to make it truly yours.</p>
+                <p>From this page, you can also navigate to your announcements and tournaments you are registered for!</p>
+            </div>
+        </div>
+     
         <p class="text-styling">Thank you for choosing BitBracket. We hope to provide a great experience.</p>
 
         <div class="ui very padded segment">
@@ -44,5 +59,6 @@
     <a href="@Url.Action("AllTournaments", "Home")" class="ui button secondary">See Available Tournaments</a>
 
     <script src="~/js/profilepage.js"></script>
+    <script src="~/js/modalswitcher.js"></script>
 </body>
 </html>
