--- a/main/BitBracket/src/BitBracket/Views/Home/TournamentImIn.cshtml
+++ b/main/BitBracket/src/BitBracket/Views/Home/TournamentImIn.cshtml
@@ -8,11 +8,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewData["Title"]</title>
+    <link rel="stylesheet" href="~/css/site.css" />
 </head>
 <body class="announcement-background">
     <div class="ui container">
-        <h1 class="title-styling">Registered Tournaments</h1>
-        <p class="text-styling">Here you can view all the tournaments you are registered for and withdraw if necessary.</p>
+        <h1 class="title-styling">Registered Tournaments
+            <button id="myBtn">i</button>
+        </h1>
+<div id="myModal" class="modal">
+            <!-- Modal content -->
+            <div class="modal-content">
+                <span class="close">&times;</span>
+                <p>This page allows you to view all the tournaments you are registered for, along with the option to withdraw.</p>
+            </div>
+</div>
 
         <div class="ui very padded segment">
             <div class="ui divided items" id="tournaments-container">
@@ -32,6 +41,7 @@
 
     @section Scripts {
         <script src="~/js/TournamentImIn.js"></script>
+        <script src="~/js/modalswitcher.js"></script>
     }
 </body>
 </html>
