--- a/main/BitBracket/src/BitBracket/Views/Home/Tournaments.cshtml
+++ b/main/BitBracket/src/BitBracket/Views/Home/Tournaments.cshtml
@@ -4,7 +4,15 @@
 <html lang="en">
 <body class="announcement-background">
     <div class="ui container">
-        <h1 class="title-styling">Tournament: @Model.Name </h1>
+        <h1 class="title-styling">Tournament: @Model.Name 
+            <button id="myBtn">i</button>
+        </h1>
+        <div id="myModal" class="modal">
+            <div class="modal-content">
+                <span class="close">&times;</span>
+                <p>Welcome to the tournament page! Here you can view the details of a tournament and send a request to participate.</p>
+            </div>
+        </div>
 
     </div>
 
@@ -72,4 +80,5 @@
         </div>
     <script src="~/js/signlar/dist/browser/signalr.js"></script>
     <script src="~/js/chat.js"></script>
+    <script src="~/js/modalswitcher.js"></script>
 </body>
