--- a/main/BitBracket/src/BitBracket/Views/Home/UserAnnouncementCreate.cshtml
+++ b/main/BitBracket/src/BitBracket/Views/Home/UserAnnouncementCreate.cshtml
@@ -1,16 +1,34 @@
 @{
     ViewData["Title"] = "Create Announcements";
 }
+<head>
 
+<link rel="stylesheet" href="~/css/site.css" />
+
+</head>
 <body class="announcement-background"></body>
 <div class="section-gap"></div>
 <div class="ui container">
-    <h1 class="title-styling">@ViewData["Title"]</h1>
+    <div>
+    <h1 class="title-styling">@ViewData["Title"]
+        <button id="myBtn">i</button>
+    </h1>
+    <div id="myModal" class="modal">
+        <!-- Modal content -->
+        <div class="modal-content">
+            <span class="close">&times;</span>
+                <p>Welcome to your create announcements page, where you can create an announcement as save it as a draft, or publish it right away!</p>
+
+        </div>
+    </div>
     @Html.Partial("~/Views/Announcements/_UserAnnouncementCreate.cshtml")
+</div>
 
     <a href="@Url.Action("UserAnnouncementForm", "Home")" class="ui button secondary">Return to Announcement Page</a>
 </div>
 
 @section Scripts {
     <script src="~/js/userAnnouncementCreate.js"></script>
+    <script src="~/js/modalswitcher.js"></script>
+
 }
