--- a/main/BitBracket/src/BitBracket/Views/Home/UserAnnouncementForm.cshtml
+++ b/main/BitBracket/src/BitBracket/Views/Home/UserAnnouncementForm.cshtml
@@ -1,8 +1,24 @@
 @{
     ViewData["Title"] = "My Announcements";
 }
+<head>
+    <link rel="stylesheet" href="~/css/site.css" />
+
+</head>
 <body class="announcement-background"></body>
-<h1 class="title-styling">@ViewData["Title"]</h1>
+<h1 class="title-styling">@ViewData["Title"]
+    <button id="myBtn">i</button>
+
+</h1>
+<div id="myModal" class="modal">
+    <!-- Modal content -->
+    <div class="modal-content">
+        <span class="close">&times;</span>
+        <p>Welcome to our user announcement page! From here, you can see your latest user announcement, go to create your own user announcement,
+            and go opt in or out of receiving user announcements.</p>
+
+    </div>
+</div>
 
 <div class="section-gap"></div>
 @if (User.Identity.IsAuthenticated)
@@ -18,4 +34,6 @@
 
 @section Scripts {
     <script src="~/js/userAnnouncementForm.js"></script>
+    <script src="~/js/modalswitcher.js"></script>
+
 }
