Registered User Bracket Feature without updating
Fixed unfound bug where a bracket would try to generate when two players were entered in the double elimination format when format does not support two players

--- a/main/BitBracket/src/BitBracket/Views/Shared/_Layout.cshtml
+++ b/main/BitBracket/src/BitBracket/Views/Shared/_Layout.cshtml
@@ -92,7 +92,7 @@
  
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+   
     <script src="~/lib/jquery-bracket/jquery.bracket.min.js"></script>
     <script src="~/lib/jquery-ui/dist/jquery-ui.min.js"></script>
     <!-- Semantic UI JS -->
@@ -101,7 +101,8 @@
     <script src="~/js/themeSwitcher.js" asp-append-version="true"></script>
     <script src="~/js/FriendRequest.js" asp-append-version="true"></script>
     <script>
-        $('.ui.dropdown').dropdown(); // Initialize Semantic UI dropdown
+      //  $('.ui.dropdown').dropdown(); // Initialize Semantic UI dropdown
+      //  <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     </script>
 
     @await RenderSectionAsync("Scripts", required: false)
