--- a/main/BitBracket/src/BitBracket/Views/Bracket/TournamentDashboard.cshtml
+++ b/main/BitBracket/src/BitBracket/Views/Bracket/TournamentDashboard.cshtml
@@ -2,19 +2,19 @@
 <html>
 <head>
     <title>Tournament Dashboard</title>
-<link rel="stylesheet" href="~/css/site.css" />
+@*<link rel="stylesheet" href="~/css/site.css" />*@
 </head>
 <body class="announcement-background">
     <h1 class="title-styling">Tournament Dashboard
         <button id="myBtn">i</button>
     </h1>
-<div id="myModal" class="modal">
+@*<div id="myModal" class="modal">
         <!-- Modal content -->
         <div class="modal-content">
             <span class="close">&times;</span>
             <p>Welcome to the tournament dashboard! From here, you can create a new tournament, view all the tournaments you have created, and go to your tournaments to manage them in detail.</p>
         </div>
-</div>
+</div>*@
 
     <!-- Button to open the tournament creation form -->
     <button type="button" class="btn btn-primary mb-3" data-toggle="modal" data-target="#tournamentModal">
@@ -60,4 +60,4 @@
 </html>
 
 <script src="~/js/TournamentDashboard.js"></script> 
-<script src="~/js/modalswitcher.js"></script>
+@*<script src="~/js/modalswitcher.js"></script>*@
