--- a/main/BitBracket/src/BitBracket/Views/Bracket/TournamentPage.cshtml
+++ b/main/BitBracket/src/BitBracket/Views/Bracket/TournamentPage.cshtml
@@ -4,20 +4,21 @@
 <html>
 <head>
     <title>Tournament Page</title>
-<link rel="stylesheet" href="~/css/site.css" />
+@*<link rel="stylesheet" href="~/css/site.css" />*@
 </head>
 <body class="announcement-background">
     <h1 class="title-styling">
         Tournament Page
         <button id="myBtn">i</button>
     </h1>
-<div id="myModal" class="modal">
+    @*
+    <div id="myModal" class="modal">
         <div class="modal-content">
             <span class="close">&times;</span>
             <p>Welcome to the tournament page, where you can create a new bracket, set a broadcast link, and manage participation requests! You can also view your created brackets and see them in more detail there.</p>
         </div>
-</div>
-
+    </div>
+    *@
     <div class="ui container mb-3">
         <div class="ui segment">
             <h1 class="ui sub header" id="tournamentName">Tournament Name</h1>
@@ -149,4 +150,4 @@
 <script src="https://player.twitch.tv/js/embed/v1.js"></script>
  <script src="~/js/tournament.js"></script>
  <script src="~/js/participateRequest.js"></script>
-<script src="~/js/modalswitcher.js"></script>
+@*<script src="~/js/modalswitcher.js"></script>*@
