--- a/main/BitBracket/src/BitBracket/Views/Home/Index.cshtml
+++ b/main/BitBracket/src/BitBracket/Views/Home/Index.cshtml
@@ -13,7 +13,7 @@
 <div class="section-gap"></div>
 <body class="announcement-background"></body>
     <div class="ui container center aligned">
-        <h1 class="title-styling">Welcome to BitBracket
+        <h1 class="title-styling">Welcome to BitBracket 🎮
         <button id="myBtn">i</button>
 
         </h1>
