--- a/main/BitBracket/src/BitBracket/Views/Bracket/TournamentDashboard.cshtml
+++ b/main/BitBracket/src/BitBracket/Views/Bracket/TournamentDashboard.cshtml
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Tournament Dashboard</title>
-<link rel="stylesheet" href="~/css/site.css" />
+@* <link rel="stylesheet" href="~/css/site.css" /> *@
 </head>
 <body class="announcement-background">
     <h1 class="title-styling">Tournament Dashboard
