--- a/main/BitBracket/src/BitBracket/Views/Bracket/TournamentPage.cshtml
+++ b/main/BitBracket/src/BitBracket/Views/Bracket/TournamentPage.cshtml
@@ -4,7 +4,7 @@
 <html>
 <head>
     <title>Tournament Page</title>
-<link rel="stylesheet" href="~/css/site.css" />
+@* <link rel="stylesheet" href="~/css/site.css" /> *@
 </head>
 <body class="announcement-background">
     <h1 class="title-styling">
