--- a/main/BitBracket/src/BitBracket/Views/Shared/_Layout.cshtml
+++ b/main/BitBracket/src/BitBracket/Views/Shared/_Layout.cshtml
@@ -101,7 +101,7 @@
     <script src="~/js/themeSwitcher.js" asp-append-version="true"></script>
     <script src="~/js/FriendRequest.js" asp-append-version="true"></script>
     <script>
-      //  $('.ui.dropdown').dropdown(); // Initialize Semantic UI dropdown
+      $('.ui.dropdown').dropdown(); // Initialize Semantic UI dropdown
       //  <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     </script>
 
