commiting for our team to have the sprint 6 stuff

--- a/main/BitBracket/src/BitBracket/Views/Home/Tournaments.cshtml
+++ b/main/BitBracket/src/BitBracket/Views/Home/Tournaments.cshtml
@@ -15,6 +15,31 @@
         </div>
 
     </div>
+    <div class="ui very padded segment">
+        <div class="ui divided items">
+            <div class="item">
+                <div class="image">
+                    <img id="profileImage" src="" alt="Broadcast not set" class="ui medium rounded image">
+                   
+                    <a class="ui teal ribbon label clickable">Profile Picture</a>
+                </div>
+                <div class="content">
+                    <a class="header">Owner</a>
+                    <div class="meta">
+                        <span>@Model.Owner</span>
+                    </div>
+                    <div class="description">
+                        <p><strong>Tag:</strong> <div id="tagId" class="ui label">Tag?</div></p>
+                        <p><strong>Bio:</strong> <div id="bioId" class="ui small fluid input">Bio?</div></p>
+                    </div>
+                    <div class="extra">
+                        <button id="saveTagButtonId" class="ui small primary button">Register</button>
+                        <button id="saveBioButtonId" class="ui small secondary button">Open chat</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <div class="ui very padded segment">
         <div class="ui divided items">
