--- a/main/BitBracket/src/BitBracket/Views/Home/Tournaments.cshtml
+++ b/main/BitBracket/src/BitBracket/Views/Home/Tournaments.cshtml
@@ -2,11 +2,19 @@
 @model TournamentViewModel
 <!DOCTYPE html>
 <html lang="en">
+<head>
+    <link rel="stylesheet" href="~/css/broadcast.css" />
+</head>
 <body class="announcement-background">
     <div class="ui container">
-        <h1 class="title-styling">Tournament: @Model.Name 
+
+        <div  id="tournament-name" style="visibility: hidden;">@Model.Name</div>
+        </p>
+        <h1 id="tournament-name" class="title-styling">
+            Tournament - @Model.Name
             <button id="myBtn">i</button>
         </h1>
+
         <div id="myModal" class="modal">
             <div class="modal-content">
                 <span class="close">&times;</span>
@@ -19,9 +27,10 @@
         <div class="ui divided items">
             <div class="item">
                 <div class="image">
-                    <img id="profileImage" src="" alt="Broadcast not set" class="ui medium rounded image">
-                   
-                    <a class="ui teal ribbon label clickable">Profile Picture</a>
+                    <div>
+                        <div id="stream-embed"></div>
+                    </div>
+                    <a class="ui teal ribbon label">Broadcast Channel</a>
                 </div>
                 <div class="content">
                     <a class="header">Owner</a>
@@ -29,12 +38,12 @@
                         <span>@Model.Owner</span>
                     </div>
                     <div class="description">
-                        <p><strong>Tag:</strong> <div id="tagId" class="ui label">Tag?</div></p>
-                        <p><strong>Bio:</strong> <div id="bioId" class="ui small fluid input">Bio?</div></p>
+                        <p><strong>Location</strong> <div id="tagId" class="ui small fluid">@Model.Location</div></p>
+                        <p><strong>Status</strong> <div id="bioId" class="ui small fluid input">@Model.Status</div></p>
                     </div>
                     <div class="extra">
-                        <button id="saveTagButtonId" class="ui small primary button">Register</button>
-                        <button id="saveBioButtonId" class="ui small secondary button">Open chat</button>
+                        <button id="participateButton" class="ui small primary button">Register</button>
+                        <button id="openChatButton" class="ui small secondary button">Open chat</button>
                     </div>
                 </div>
             </div>
@@ -46,12 +55,9 @@
             <div class="item">
                 
                 <div class="content">
-                    <a class="header"> Owner:  @Model.Owner</a>
 
                     <div class="meta">
-                        <p><strong>Location:</strong> <div id="bioId" class="ui small fluid input">@Model.Location</div></p>
-                        <p><strong>Status:</strong> <div id="bioId" class="ui small fluid input">@Model.Status</div></p>
-                    </div>
+                          </div>
 
                 </div>
             </div>
@@ -103,7 +109,19 @@
                 <ul id="messagesList"></ul>
             </div>
         </div>
+    <script>
+        @*
+        document.addEventListener('DOMContentLoaded', function () {
+            const tournamentId = @Model.Id;
+            const userId = @ViewBag.UserId; // Correctly retrieve userId from ViewBag
+            checkParticipationStatus(tournamentId, userId); // Check participation status on load
+        });*@
+    </script>
+    <script src="https://player.twitch.tv/js/embed/v1.js"></script>
     <script src="~/js/signlar/dist/browser/signalr.js"></script>
     <script src="~/js/chat.js"></script>
     <script src="~/js/modalswitcher.js"></script>
+    <script src="~/js/broadcastSet.js"></script>
+    <script src="~/js/tournamentProfile.js"></script>
+
 </body>
