commiting working feature that reduces redundancy and ensures our tournament pages look good and lets a user register for a tournament

--- a/main/BitBracket/src/BitBracket/Views/Home/Profile.cshtml
+++ b/main/BitBracket/src/BitBracket/Views/Home/Profile.cshtml
@@ -56,8 +56,7 @@
 
     <a href="@Url.Action("ManageAnnouncement", "Home")" class="ui button secondary">Manage Announcements</a>
     <a href="@Url.Action("TournamentImIn", "Home")" class="ui button secondary">View Registered Tournament</a>
-    <a href="@Url.Action("AllTournaments", "Home")" class="ui button secondary">See Available Tournaments</a>
-
+    <a href="blank-for-now" class="ui button secondary">View Friends</a>
     <script src="~/js/profilepage.js"></script>
     <script src="~/js/modalswitcher.js"></script>
 </body>
