Adds GUID reCAPTCHA, partial impl bracket view & SA

--- a/main/BitBracket/src/BitBracket/Views/Bracket/TournamentPage.cshtml
+++ b/main/BitBracket/src/BitBracket/Views/Bracket/TournamentPage.cshtml
@@ -140,8 +140,7 @@
     </div>
 
     <!-- Bracket display -->
-    <div id="bracketsList">
-    </div>
+    <div id="bracketsList"></div>
 
 </body>
 </html>
