--- a/main/BitBracket/src/BitBracket/Views/Bracket/BracketView.cshtml
+++ b/main/BitBracket/src/BitBracket/Views/Bracket/BracketView.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bracket Page</title>
+    <title>Bracket View</title>
 </head>
 <body class="announcement-background">
     <div class="container-fluid" style="margin-top: 20px;">
@@ -23,4 +23,4 @@
 </body>
 </html>
 
- <script src="~/js/bracketpage.js"></script>
+ <script src="~/js/bracketdisplay.js"></script>
