--- a/main/BitBracket/src/BitBracket/Views/Bracket/CreateBracket.cshtml
+++ b/main/BitBracket/src/BitBracket/Views/Bracket/CreateBracket.cshtml
@@ -7,6 +7,7 @@
 <html lang="en">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <head>
+    <script src="https://www.recaptcha.net/recaptcha/api.js" async defer></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="~/css/site.css" />
@@ -53,6 +54,7 @@
          
     </div>
     <div class="d-grid gap-2">
+        <div id="captcha" class="g-recaptcha" data-sitekey="6LeIxAcTAAAAAJcZVRqyHh71UMIEGNQ_MXjiZKhI"></div>
         <button id="generateButton" type="button" class="btn btn-primary">
             Generate Bracket Link
             <i class="clipboard icon"></i>
