commiting block, merging pages, and standings features

--- a/main/BitBracket/src/BitBracket/Views/Home/Profile.cshtml
+++ b/main/BitBracket/src/BitBracket/Views/Home/Profile.cshtml
@@ -57,6 +57,7 @@
     <a href="@Url.Action("ManageAnnouncement", "Home")" class="ui button secondary">Manage Announcements</a>
     <a href="@Url.Action("TournamentImIn", "Home")" class="ui button secondary">View Registered Tournament</a>
     <a class="ui button secondary">View Friends</a>
+    <a href="@Url.Action("Standings", "Home")" class="ui button secondary">View Standings</a>
 
     <button class="ui button secondary" id="show-blocked-users">Show Blocked Users</button>
     <div class="ui very padded segment divided items" id="show-blocked-container" style="display: none;">
