--- a/main/BitBracket/src/BitBracket/Views/Shared/_Layout.cshtml
+++ b/main/BitBracket/src/BitBracket/Views/Shared/_Layout.cshtml
@@ -41,7 +41,7 @@
                     <a class="item navbar-text" asp-area="" asp-controller="Home" asp-action="Profile">Profile</a>
                     <a class="item navbar-text" asp-area="" asp-controller="Bracket" asp-action="TournamentDashboard">Tournament Dashboard</a>
                     <!-- Friend Requests Dropdown -->
-                    <div class="dropdown" id="friendRequestsDropdown">
+                    /*<div class="dropdown" id="friendRequestsDropdown">
                         <button class="btn btn-secondary dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Friend Requests
                         </button>
@@ -60,6 +60,7 @@
                             <!-- Friends will be populated here -->
                         </div>
                     </div>
+                    */
                 }
                 <a class="item navbar-text" asp-area="" asp-controller="Home" asp-action="Privacy">About</a>
                 
@@ -99,7 +100,7 @@
     <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     <script src="~/js/themeSwitcher.js" asp-append-version="true"></script>
-    <script src="~/js/FriendRequest.js" asp-append-version="true"></script>
+    /*<script src="~/js/FriendRequest.js" asp-append-version="true"></script>*/
     <script>
       $('.ui.dropdown').dropdown(); // Initialize Semantic UI dropdown
       //  <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
