commiting a cleaned up standings page

--- a/main/BitBracket/src/BitBracket/Views/Home/Standings.cshtml
+++ b/main/BitBracket/src/BitBracket/Views/Home/Standings.cshtml
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
 <body class="announcement-background">
-    <h1 id="name">@Model.Username</h1>
-    <h1>Your Placements</h1>
+    <h1 id="name" class="title-styling">@Model.Username</h1>
+    <h1 class="title-styling">Your Placements</h1>
     <div class="ui very padded segment">
         <div class="ui divided items">
             <div class="item">
