commiting working seeding weights aspect of the application

--- a/main/BitBracket/src/BitBracket/Views/Home/Profile.cshtml
+++ b/main/BitBracket/src/BitBracket/Views/Home/Profile.cshtml
@@ -35,7 +35,7 @@
                         <a class="ui teal ribbon label clickable">Profile Picture</a>
                     </div>
                     <div class="content">
-                        <a class="header">@Model.Username</a>
+                        <a class="header" id="username-thing">@Model.Username</a>
                         <div class="meta">
                             <span>@Model.Email</span>
                         </div>
