--- a/main/BitBracket/src/BitBracket/wwwroot/css/site.css
+++ b/main/BitBracket/src/BitBracket/wwwroot/css/site.css
@@ -370,6 +370,17 @@ close:focus {
     padding: 5px 0; /* Add more padding for better visual spacing */
 }
 
+#myBtn:hover {
+    background-color: #0056b3; /* Darker shade for hover */
+}
 
+.skill-level-bar {
+    color: white;
+    padding: 10px;
+    border-radius: 5px;
+    font-weight: bold;
+    text-transform: uppercase;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+}
   
   
